RESOLVED FIXED267119
[WebGPU] dynamic bind group indices continue to be incorrect
https://bugs.webkit.org/show_bug.cgi?id=267119
Summary [WebGPU] dynamic bind group indices continue to be incorrect
Mike Wyrzykowski
Reported 2024-01-04 20:30:57 PST
[WebGPU] dynamic bind group indices continue to be incorrect
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-04 20:31:17 PST
Mike Wyrzykowski
Comment 2 2024-01-04 21:45:50 PST
EWS
Comment 3 2024-01-05 07:48:02 PST
Committed 272687@main (b5c493976ba5): <https://commits.webkit.org/272687@main> Reviewed commits have been landed. Closing PR #22422 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.