[WebGPU] dynamic bind group indices continue to be incorrect https://bugs.webkit.org/show_bug.cgi?id=267119 <radar://120510255>

Reviewed by Tadeu Zagallo.

The copy in PipelineLayout assumed the bind group
indices were linearly increasing but this was not guaranteed as
they were stored in a HashMap.

Build a shadow sorted container to address this as the data does
not change after creation.

* Source/WebGPU/WebGPU/BindGroupLayout.h:
* Source/WebGPU/WebGPU/BindGroupLayout.mm:
(WebGPU::Device::createBindGroupLayout):
This was being sorted uncessarily each iteration, correct this.

(WebGPU::BindGroupLayout::BindGroupLayout):
(WebGPU:: const):
* Source/WebGPU/WebGPU/PipelineLayout.mm:
(WebGPU::PipelineLayout::offsetVectorForBindGroup):

Canonical link: https://commits.webkit.org/272687@main