Source/WebGPU/WebGPU/BindGroupLayout.h
@@ -112,6 +112,7 @@ public:
     static bool isPresent(const WGPUStorageTextureBindingLayout&);
 
     const EntriesContainer& entries() const { return m_bindGroupLayoutEntries; }
+    const Vector<const Entry*> sortedEntries() const;
     uint32_t sizeOfVertexDynamicOffsets() const;
     uint32_t sizeOfFragmentDynamicOffsets() const;
     uint32_t sizeOfComputeDynamicOffsets() const;
@@ -137,6 +138,7 @@ private:
     const id<MTLArgumentEncoder> m_computeArgumentEncoder { nil };
 
     const EntriesContainer m_bindGroupLayoutEntries;
+    Vector<const Entry*> m_sortedEntries;
     const bool m_valid { true };
     const size_t m_sizeOfVertexDynamicOffsets { 0 };
     const size_t m_sizeOfFragmentDynamicOffsets { 0 };
