Source/WebGPU/WebGPU/BindGroupLayout.mm
@@ -342,27 +342,6 @@ Ref<BindGroupLayout> Device::createBindGroupLayout(const WGPUBindGroupLayoutDesc
             }
         }
 
-        auto hasDynamicOffsets = ^(size_t* sizeOfDynamicOffsets, size_t stageCount) {
-            for (size_t i = 0; i < stageCount; ++i) {
-                if (sizeOfDynamicOffsets[i])
-                    return true;
-            }
-
-            return false;
-        };
-        HashMap<uint32_t, uint32_t, DefaultHash<uint32_t>, WTF::UnsignedWithZeroKeyHashTraits<uint32_t>> dynamicOffsetIndices;
-        if (hasDynamicOffsets(sizeOfDynamicOffsets, stageCount)) {
-            std::sort(descriptorEntries.begin(), descriptorEntries.end(), [](const WGPUBindGroupLayoutEntry& a, const WGPUBindGroupLayoutEntry& b) {
-                return a.binding < b.binding;
-            });
-            uint32_t nextDynamicOffsetIndex = 0;
-            for (auto& entry : descriptorEntries) {
-                if (entry.buffer.hasDynamicOffset)
-                    dynamicOffsetIndices.add(entry.binding, nextDynamicOffsetIndex++);
-            }
-        }
-
-        auto dynamicOffsetsIt = dynamicOffsetIndices.find(entry.binding);
         bindGroupLayoutEntries.add(entry.binding, BindGroupLayout::Entry {
             .binding = entry.binding,
             .visibility = entry.visibility,
@@ -372,8 +351,31 @@ Ref<BindGroupLayout> Device::createBindGroupLayout(const WGPUBindGroupLayoutDesc
             .vertexDynamicOffset = WTFMove(dynamicOffsets[0]),
             .fragmentDynamicOffset = WTFMove(dynamicOffsets[1]),
             .computeDynamicOffset = WTFMove(dynamicOffsets[2]),
-            .dynamicOffsetsIndex = dynamicOffsetsIt == dynamicOffsetIndices.end() ? std::numeric_limits<uint32_t>::max() : dynamicOffsetsIt->value
+            .dynamicOffsetsIndex = std::numeric_limits<uint32_t>::max()
         });
+    }
+
+    auto hasDynamicOffsets = ^(size_t* sizeOfDynamicOffsets, size_t stageCount) {
+        for (size_t i = 0; i < stageCount; ++i) {
+            if (sizeOfDynamicOffsets[i])
+                return true;
+        }
+
+        return false;
+    };
+
+    if (hasDynamicOffsets(sizeOfDynamicOffsets, stageCount)) {
+        std::sort(descriptorEntries.begin(), descriptorEntries.end(), [](const WGPUBindGroupLayoutEntry& a, const WGPUBindGroupLayoutEntry& b) {
+            return a.binding < b.binding;
+        });
+        uint32_t nextDynamicOffsetIndex = 0;
+        for (auto& entry : descriptorEntries) {
+            if (entry.buffer.hasDynamicOffset) {
+                auto it = bindGroupLayoutEntries.find(entry.binding);
+                ASSERT(it != bindGroupLayoutEntries.end());
+                it->value.dynamicOffsetsIndex = nextDynamicOffsetIndex++;
+            }
+        }
     }
 
     auto label = fromAPI(descriptor.label);
@@ -438,6 +440,12 @@ BindGroupLayout::BindGroupLayout(StageMapTable&& indicesForBinding, id<MTLArgume
     , m_dynamicUniformBuffers(dynamicUniformBuffers)
     , m_dynamicStorageBuffers(dynamicStorageBuffers)
 {
+    m_sortedEntries.reserveCapacity(m_bindGroupLayoutEntries.size());
+    for (auto& kvp : m_bindGroupLayoutEntries)
+        m_sortedEntries.append(&kvp.value);
+    std::sort(m_sortedEntries.begin(), m_sortedEntries.end(), [](const Entry* a, const Entry* b) {
+        return a->binding < b->binding;
+    });
 }
 
 BindGroupLayout::BindGroupLayout(const Device& device)
@@ -549,6 +557,11 @@ uint32_t BindGroupLayout::dynamicUniformBuffers() const
 uint32_t BindGroupLayout::dynamicStorageBuffers() const
 {
     return m_dynamicStorageBuffers;
+}
+
+const Vector<const BindGroupLayout::Entry*> BindGroupLayout::sortedEntries() const
+{
+    return m_sortedEntries;
 }
 
 } // namespace WebGPU
